--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
 		"@floating-ui/dom": "^1.5.3",
 		"@skeletonlabs/skeleton": "^2.3.0",
 		"@skeletonlabs/tw-plugin": "^0.2.2",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.25.2",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/chrome": "^0.0.247",
@@ -43,11 +44,10 @@
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite-plugin-tailwind-purgecss": "^0.1.3",
-		"vite": "^4.4.11",
-		"vitest": "^0.34.6",
+		"vite": "^5.0.0",
+		"vitest": "^1.0.0",
 		"npm-run-all": "^4.1.5",
 		"watch": "^1.0.2"
-
 	},
 	"type": "module"
 }
