Undo previous complication

--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "pnpm build-dev && run-p run:chrome watch",
-		"build-dev": "vite build --mode development && pnpm replace-background-path && pnpm build-content-script",
-		"watch": "watch 'pnpm build-dev' src static",
-		"build": "vite build && pnpm replace-background-path && pnpm build-content-script",
-		"run:chrome": "web-ext run -t chromium -s build",
-		"replace-background-path": "cd build; sed -i \"\" \"s#\\$BACKGROUND_PATH#$(find app -wholename '*/immutable/background.*.js')#g\" manifest.json; cd -",
-		"build-content-script": "esbuild src/content.ts --bundle --minify --outdir=build",
+		"dev": "vite dev",
+		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -43,11 +38,8 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite-plugin-tailwind-purgecss": "^0.1.3",
-		"vite": "^5.0.0",
-		"vitest": "^1.0.0",
-		"npm-run-all": "^4.1.5",
-		"watch": "^1.0.2"
+		"vite": "^4.4.11",
+		"vitest": "^0.34.6"
 	},
 	"type": "module"
 }
